vscode default zsh

--- a/vscode.settings.json
+++ b/vscode.settings.json
@@ -23,5 +23,6 @@
         },
         "apiVersion": 2,
         "showGlobalVariables": true
-    }
+    },
+    "terminal.integrated.defaultProfile.linux": "zsh"
 }
